--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
+  <script src="https://js.stripe.com/terminal/v1/" async></script>
 </head>
 <body>
   <!-- pour l'image background et pour le logo -->
@@ -36,7 +36,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="https://asso-bleuets.com/la-madrassah-des-bleuets/">Madrassah des Bleuets</a>
           <a class="dropdown-item" href="https://asso-bleuets.com/oumma-mobile/">Oumma Mobile</a>
-            
+
             <a class="dropdown-item" href="https://asso-bleuets.com/pole-social/">Pôles sociaux</a>
                       <div class="dropdown-divider">
                         <div class="dropdown-menu">
@@ -57,7 +57,7 @@
         <a class="nav-link" href="https://asso-bleuets.com/contact/">Contact</a>
       </li>
     </ul>
-    
+
   </div>
 </nav>
 
